--- a/CardsOfHearthstone/app/src/main/res/layout/activity_main.xml
+++ b/CardsOfHearthstone/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/startButton2"
+        android:id="@+id/helpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
