--- a/CardsOfHearthstone/app/src/main/res/menu/menu_main.xml
+++ b/CardsOfHearthstone/app/src/main/res/menu/menu_main.xml
@@ -23,4 +23,9 @@
         android:orderInCategory="103"
         android:title="@string/action_help"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="103"
+        android:title="@string/action_refresh"
+        app:showAsAction="always" />
 </menu>
