--- a/CardsOfHearthstone/app/src/main/res/layout/activity_main.xml
+++ b/CardsOfHearthstone/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Cards Of Hearthstone"
+        android:text="@string/welcome_to_cards_of_hearthstone"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="148dp"
-        android:text="Start Apllication"
+        android:text="@string/start_apllication"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="148dp"
-        android:text="HOW TO USE"
+        android:text="@string/how_to_use"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/startButton" />
